--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -2,26 +2,36 @@ services:
   trader:
     build: .
     secrets:
-      - db_env
+      - db_name_env
+      - db_password_env
+      - db_user_env
       - app_env
     environment:
       APP_ENV_FILE: /run/secrets/app_env
-      DB_ENV_FILE: /run/secrets/db_env
+      DB_NAME_ENV_FILE: /run/secrets/db_name_env
+      DB_PASSWORD_ENV_FILE: /run/secrets/db_password_env
+      DB_USER_ENV_FILE: /run/secrets/db_user_env
       RUNTIME_ENVIRONMENT: DEV
     depends_on:
       - db
   db:
     image: postgres:16.4
     secrets:
-      - db_env
+      - db_password_env
+      - db_name_env
+      - db_user_env
     environment:
-      POSTGRES_PASSWORD_FILE: /run/secrets/db_env
-      POSTGRES_USER_FILE: /run/secrets/db_env
-      POSTGRES_DB_FILE: /run/secrets/db_env
-    ports:
-      - 127.0.0.1:5432:5432
+      # https://stackoverflow.com/questions/78933139/docker-secrets-do-not-work-with-postgres-container
+      POSTGRES_USER_FILE: /run/secrets/db_user_env
+      POSTGRES_PASSWORD_FILE: /run/secrets/db_password_env
+      POSTGRES_DB_FILE: /run/secrets/db_name_env
+      #POSTGRES_USER: sie
+      #POSTGRES_PASSWORD: elo
+      #POSTGRES_DB: off
+    expose:
+      - "5432"
     healthcheck:
-      test: [ "CMD", "pg_isready" ]
+      test: [ "CMD", "pg_isready"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -30,7 +40,11 @@ services:
 secrets:
   app_env:
     file: ./.app.env
-  db_env:
-    file: ./.db.env
+  db_password_env:
+    file: ./.db.password.env
+  db_name_env:
+    file: ./.db.name.env
+  db_user_env: 
+    file: ./.db.user.env
 volumes:
   db-data:
