--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -2,25 +2,32 @@ services:
   trader:
     build: .
     secrets:
-      - db_env
+      - db_name
+      - db_password
+      - db_user
       - app_env
     environment:
       APP_ENV_FILE: /run/secrets/app_env
-      DB_ENV_FILE: /run/secrets/db_env
+      DB_NAME_FILE: /run/secrets/db_name
+      DB_PASSWORD_FILE: /run/secrets/db_password
+      DB_USER_FILE: /run/secrets/db_user
     depends_on:
-      - db
+      db:
+        condition: service_healthy
   db:
     image: postgres:16.4
     secrets:
-      - db_env
+      - db_password
+      - db_name
+      - db_user
     environment:
-      POSTGRES_PASSWORD_FILE: /run/secrets/db_env
-      POSTGRES_USER_FILE: /run/secrets/db_env
-      POSTGRES_DB_FILE: /run/secrets/db_env
-    ports:
-      - 127.0.0.1:5432:5432
+      POSTGRES_USER_FILE: /run/secrets/db_user
+      POSTGRES_PASSWORD_FILE: /run/secrets/db_password
+      POSTGRES_DB_FILE: /run/secrets/db_name
+    expose:
+      - "5432"
     healthcheck:
-      test: [ "CMD", "pg_isready" ]
+      test: [ "CMD", "pg_isready"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -29,7 +36,11 @@ services:
 secrets:
   app_env:
     file: ./.app.env
-  db_env:
-    file: ./.db.env
+  db_password:
+    file: ./.db.password
+  db_name:
+    file: ./.db.name
+  db_user: 
+    file: ./.db.user
 volumes:
   db-data:
