--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -12,6 +12,15 @@ RUN go build -o /traderbot
 
 FROM alpine:3.20 AS final
 
+ARG USER=user
+
+RUN adduser -D $USER \
+        && mkdir -p /etc/sudoers.d \
+        && echo "$USER ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/$USER \
+        && chmod 0440 /etc/sudoers.d/$USER
+
+USER $USER
+
 WORKDIR /
 
 COPY --from=build /traderbot /traderbot
